fix: Scrollbars on the thumbnails to be auto visible (#2605)
The thumbnail view had hte scrollbars not visible and they didn't
appear, and that made it hard to discover how to scroll.

--- a/platform/ui/src/assets/styles/styles.css
+++ b/platform/ui/src/assets/styles/styles.css
@@ -1,6 +1,11 @@
 /* CUSTOM OHIF SCROLLBAR */
 .ohif-scrollbar {
   scrollbar-color: #3E5967 transparent;
+  scrollbar-gutter: stable;
+}
+
+.ohif-scrollbar:hover {
+  overflow-y: auto;
 }
 
 .ohif-scrollbar::-webkit-scrollbar {
